--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <body>
     <header>
-        <li><a href="index.html" class="active" id="title-logo">
-                <h1>Healthy Cooking Made Simple!</h1>
-            </a></li>
+        <a href="index.html" id="title-logo">
+            <h1>Healthy Cooking Made Simple!</h1>
+        </a>
         <input type="checkbox" id="nav-dropdown-toggle" name="nav-dropdown-toggle">
         <label for="nav-dropdown-toggle" class="nav-dropdown-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
@@ -31,9 +31,8 @@
                 <h2>Welcome!</h2>
                 <p>Hello and welcome to Healthy Cooking Made Simple! This is a website designed to help you eat better
                     without having to make difficult dishes. Our recipes have been resourced from across the web and we
-                    hope you enjoy them.
-                </p>
-        </section>
+                    hope you enjoy them.</p>
+            </div>
         </section>
         <div class="main-content" id="main-content">
             <div class="resources-container">
@@ -69,7 +68,7 @@
                                 the steps carefully. Anyhting is possible in the kitchen when everything is done as it
                                 is supposed to be. Given that you've got the correct equipment to follow the recipes;
                                 the final result should be as delicious as you anticipated. Good Luck!</p>
-                                <h2 class="content-bottom"></h2>
+                            <h2 class="content-bottom"></h2>
                         </aside>
                     </div>
                 </div>
@@ -103,35 +102,37 @@
                                             </tr>
                                         </table>
                                     </div>
-        
+
                                     <div class="newsletter-radio">
                                         <table>
                                             <tr>
                                                 <td><label>Breakfast recipies</label></td>
-                                                <td><input type="radio" id="breakfast" name="recipe-preference" required></td>
+                                                <td><input type="radio" id="breakfast" name="recipe-preference"
+                                                        required></td>
                                             </tr>
                                             <tr>
                                                 <td> <label>Lunch recipies</label></td>
-                                                <td><input type="radio" id="lunch" name="recipe-preference" required></td>
+                                                <td><input type="radio" id="lunch" name="recipe-preference" required>
+                                                </td>
                                             </tr>
                                             <tr>
                                                 <td><label>Dinner recipies</label></td>
-                                                <td><input type="radio" id="dinner" name="recipe-preference" required></td>
+                                                <td><input type="radio" id="dinner" name="recipe-preference" required>
+                                                </td>
                                             </tr>
                                             <tr>
                                                 <td><label>All</label></td>
                                                 <td><input type="radio" id="all" name="recipe-preference" required></td>
                                             </tr>
-                                            </table>
-                                        </div>
-                                        <div class="newsletter-button">
-                                            <input type="submit" class="newsletter-sign-up" value="Sign Up!">
-                                       </div>
+                                        </table>
+                                    </div>
+                                    <div class="newsletter-button">
+                                        <input type="submit" class="newsletter-sign-up" value="Sign Up!">
                                     </div>
                                 </div>
                             </div>
-                                <label for="show" id="show-more">Expand/Hide</label>
-                        </div>                    
+                        </div>
+                        <label for="show" id="show-more">Expand/Hide</label>
                     </form>
                 </section>
             </div>
