placeholder content removed for lunch items

--- a/lunch-recipies.html
+++ b/lunch-recipies.html
@@ -11,9 +11,9 @@
 
 <body>
     <header>
-        <li><a href="index.html" class="active" id="title-logo">
-                <h1>Healthy Cooking Made Simple!</h1>
-            </a></li>
+        <a href="index.html" id="title-logo">
+            <h1>Healthy Cooking Made Simple!</h1>
+        </a>
         <input type="checkbox" id="nav-dropdown-toggle" name="nav-dropdown-toggle">
         <label for="nav-dropdown-toggle" class="nav-dropdown-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
@@ -26,75 +26,92 @@
         </nav>
     </header>
     <main>
-        <section class="hero-image3">
+        <section class="hero-image2">
             <div class="cover-text">
                 <h2>Why not try out our range of delicious lunch recipies!</h2>
-        </section>
+            </div>
         </section>
         <div class="main-content" id="main-content">
             <section class="section-one">
                 <h2>Section</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam reiciendis praesentium porro
-                    accusantium, veritatis dolore quos tenetur ut, debitis in ducimus earum maiores dicta similique vel
+                    accusantium, veritatis dolore quos tenetur ut, debitis in ducimus earum maiores dicta similique
+                    vel
                     temporibus facere error nisi!</p>
                 <h2 class="content-bottom"></h2>
             </section>
-            <div class="aside-columns" id="breakfast-row-one">
-                <aside>
-                    <h2>Aside</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit ab ex eveniet molestias, quisquam
-                        nesciunt eos repellendus cum rerum necessitatibus fugiat. Rem cumque voluptates aperiam,
-                        repellat molestiae eligendi sunt ab?</p>
-                    <h2 class="content-bottom"></h2>
-                </aside>
-                <aside>
-                    <h2>Aside</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam tempora voluptate asperiores
-                        debitis aperiam id, repellat corporis modi officiis sed minima! Deleniti ea autem accusamus,
-                        provident sint culpa minus ad.</p>
-                    <h2 class="content-bottom"></h2>
-                </aside>
-            </div>
-            <div class="aside-columns" id="breakfast-row-two">
-                <aside>
-                    <h2>Aside</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero facilis assumenda, nisi saepe
-                        quasi molestiae porro, consequatur quaerat quam voluptate officiis inventore pariatur temporibus
-                        qui aliquid unde consectetur suscipit obcaecati.</p>
-                    <h2 class="content-bottom"></h2>
-                </aside>
-                <aside>
-                    <h2>Aside</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero facilis assumenda, nisi saepe
-                        quasi molestiae porro, consequatur quaerat quam voluptate officiis inventore pariatur temporibus
-                        qui aliquid unde consectetur suscipit obcaecati.</p>
-                    <h2 class="content-bottom"></h2>
-                </aside>
-                </div>
-                <div class="aside-columns" id="breakfast-row-two">
-                <aside>
-                    <h2>Aside</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero facilis assumenda, nisi saepe
-                        quasi molestiae porro, consequatur quaerat quam voluptate officiis inventore pariatur temporibus
-                        qui aliquid unde consectetur suscipit obcaecati.</p>
-                    <h2 class="content-bottom"></h2>
-                </aside>
-                <aside>
-                    <h2>Aside</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero facilis assumenda, nisi saepe
-                        quasi molestiae porro, consequatur quaerat quam voluptate officiis inventore pariatur temporibus
-                        qui aliquid unde consectetur suscipit obcaecati.</p>
-                    <h2 class="content-bottom"></h2>
-                </aside>
-            </div>
+            <div class="lunch-recipies">
+                <div class="lunch-container" id="lunch-row">
+                    <aside class="" id="recipe-item">
+                        <h2>Aside</h2>
+                        <img src="" alt="">
+                        <input type="checkbox" id="expand-checkbox-()">
+                        <div class="recipe-content-()">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, voluptate enim eos,
+                                non soluta inventore, labore quod ex id ab odit corporis impedit! Ullam esse incidunt,
+                                ex pariatur non laboriosam.</p>
+                        </div>
+                        <label for="expand-checkbox-())" id="expand-checkbox-label">Expand/Hide</label>
+                    </aside>
+                    <aside class="" id="recipe-item">
+                        <h2>Aside</h2>
+                        <img src="" alt="">
+                        <input type="checkbox" id="expand-checkbox-()">
+                        <div class="recipe-content-()">
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam, quaerat temporibus?
+                                Vitae rem illo dolor, recusandae nemo rerum molestiae aliquid? Laudantium, saepe
+                                officiis optio nesciunt fugiat suscipit tenetur voluptates dolor!</p>
+                        </div>
+                        <label for="expand-checkbox-()" id="expand-checkbox-label">Expand/Hide</label>
+                    </aside>
 
-            <section>
-                <h2>Section</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus, ex. Modi, quos officiis in
-                    impedit quod iure veniam officia est suscipit distinctio, illum repellendus. Possimus, nesciunt.
-                    Iusto iste odio amet.</p>
-                    <h2 class="content-bottom"></h2>
-            </section>
+
+                    <aside class="" id="recipe-item">
+                        <h2>Aside</h2>
+                        <img src="" alt="">
+                        <input type="checkbox" id="expand-checkbox-()">
+                        <div class="recipe-content-()">
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo quis, explicabo
+                                reprehenderit, rem iure non asperiores, minima et ipsam voluptate ea inventore
+                                exercitationem delectus blanditiis necessitatibus. Deleniti nihil natus animi.</p>
+                        </div>
+                        <label for="expand-checkbox-()" id="expand-checkbox-label">Expand/Hide</label>
+                    </aside>
+                    <aside class="" id="recipe-item">
+                        <h2>Aside</h2>
+                        <img src="" alt="">
+                        <input type="checkbox" id="expand-checkbox-()">
+                        <div class="recipe-content-()">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis esse voluptates odio odit
+                                perspiciatis reiciendis in vitae distinctio similique sit ea nisi, fugit neque. Quod
+                                nisi nobis iste vitae dolorem.</p>
+                        </div>
+                        <label for="expand-checkbox-()" id="expand-checkbox-label">Expand/Hide</label>
+                    </aside>
+                    <aside class="" id="recipe-item">
+                        <h2>Aside</h2>
+                        <img src="" alt="">
+                        <input type="checkbox" id="expand-checkbox-()">
+                        <div class="recipe-content-()">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni sint nulla repudiandae,
+                                natus dolores quae omnis dolor consequuntur tenetur quaerat sequi? Quas, accusantium
+                                error! Nobis expedita ullam ducimus velit quis!</p>
+                        </div>
+                        <label for="expand-checkbox-()" id="expand-checkbox-label">Expand/Hide</label>
+                    </aside>
+                    <aside class="" id="recipe-item">
+                        <h2>Aside</h2>
+                        <img src="" alt="">
+                        <input type="checkbox" id="expand-checkbox-()">
+                        <div class="recipe-content-()">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores sit, quidem voluptate
+                                dolores consectetur praesentium est? Voluptatum error voluptate iste officia ipsum sequi
+                                enim itaque! Sunt, reiciendis architecto? Voluptatem, error!</p>
+                        </div>
+                        <label for="expand-checkbox-()" id="expand-checkbox-label">Expand/Hide</label>
+                    </aside>
+                </div>
+            </div>
         </div>
     </main>
     <footer>
