--- a/dinner-recipies.html
+++ b/dinner-recipies.html
@@ -20,8 +20,8 @@
             <ul class="navigation-bar" id="navigation-bar">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="breakfast-recipies.html">Breakfast Recipies</a></li>
-                <li><a href="lunch-recipies.html" class="active">Lunch Recipies</a></li>
-                <li><a href="dinner-recipies.html">Dinner Recipies</a></li>
+                <li><a href="lunch-recipies.html">Lunch Recipies</a></li>
+                <li><a href="dinner-recipies.html" class="active">Dinner Recipies</a></li>
             </ul>
         </nav>
     </header>
@@ -40,8 +40,8 @@
                     temporibus facere error nisi!</p>
                 <h2 class="content-bottom"></h2>
             </section>
-            <div class="lunch-recipies">
-                <div class="lunch-container" id="lunch-row">
+            <div class="dinner-recipies">
+                <div class="dinner-container" id="dinner-row">
                     <aside class="" id="recipe-item">
                         <h2>Aside</h2>
                         <img src="" alt="">
@@ -99,7 +99,7 @@
                         </div>
                         <label for="expand-checkbox-()" id="expand-checkbox-label">Expand/Hide</label>
                     </aside>
-                    <aside class="breakfast-()" id="recipe-item">
+                    <aside class="" id="recipe-item">
                         <h2>Aside</h2>
                         <img src="" alt="">
                         <input type="checkbox" id="expand-checkbox-()">
