centent added to lunch recipe page

--- a/dinner-recipies.html
+++ b/dinner-recipies.html
@@ -42,16 +42,16 @@
             </section>
             <div class="dinner-recipies">
                 <div class="dinner-container" id="dinner-row">
-                    <aside class="" id="recipe-item">
-                        <h2>Aside</h2>
-                        <img src="" alt="">
-                        <input type="checkbox" id="expand-checkbox-()">
-                        <div class="recipe-content-()">
+                    <aside class="pesto-gnocchi" id="recipe-item">
+                        <h2>Gnocchi with crispy bacon and spinach pesto</h2>
+                        <img src="./assets/images/gnocchi_with_crispy_19660_16x9.jpg" alt="An image of a bowl of pesto gnocci.">
+                        <input type="checkbox" id="expand-checkbox-pesto-gnocchi">
+                        <div class="recipe-content-pesto-gnocchi">
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, voluptate enim eos,
                                 non soluta inventore, labore quod ex id ab odit corporis impedit! Ullam esse incidunt,
                                 ex pariatur non laboriosam.</p>
                         </div>
-                        <label for="expand-checkbox-())" id="expand-checkbox-label">Expand/Hide</label>
+                        <label for="expand-checkbox-pesto-gnocchi" id="expand-checkbox-label">Expand/Hide</label>
                     </aside>
                     <aside class="" id="recipe-item">
                         <h2>Aside</h2>
